--- a/audio.html
+++ b/audio.html
@@ -56,7 +56,7 @@
                                     <li><a href="https://dictionary.cambridge.org/">Dictionary</a></li>
                                     <li><a href="presentation.html">Presentation</a>
                                         <ul class="submenu">
-                                            <li><a href="#clock">Clock</a></li>
+                                            <li><a href="#Classmate">Classmate</a></li>
                                             <li><a href="#weather">Weather</a></li>
                                         </ul>
                                     </li>
@@ -71,94 +71,40 @@
         </header>
         <!-- header-area end -->
 
-        <!-- slider-area start -->
-        <div class="presentation-clock">
-            <div  id="clock" class="text-center">
-                <div class="clock d-flex align-items-center" style="background: #fff url(img/clock.png); background-size: cover;">
-                    <div class="hour">
-                        <div class="hr" id="hr"></div>
+        <!-- pronunciation-area start -->
+        <section class="pt-100">
+            <div class="container">
+                <div class="pronunciation-audio">
+                    <div class="pronunciation-head">
+                        <h1>Pronunciation Lessons</h1>
+                        <h6>Powered by<i class="far fa-hand-point-right"></i><span>BBC-Janala</span></h6>
                     </div>
-                    <div class="min">
-                        <div class="mn" id="mn"></div>
-                    </div>
-                    <div class="sec">
-                        <div class="sc" id="sc"></div>
-                    </div>
-                </div>
-            </div>
-
-
-            <div class="weather text-center">
-                <div id="weather" class="d-flex align-items-center pt-100 pb-50" style="background-image: url(img/wather.jpg); height: 100%; width: 100%; background-size: cover; background-position: center 0;">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-xl-3 col-lg-3 col-md-3">
-                                <div class="w-head">
-                                    <h1>Weather</h1>
-                                    <h2><span>N</span><span>e</span><span>w</span><span>s</span></h2>
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-md-6">
+                            <div class="single-audio">
+                                <div class="audio-content">
+                                    <h3>Lessons - 01</h3>
                                 </div>
-                                <div class="download pt-100 pb-50">
-                                    <a href="download/presentation/weather.pdf" download="Weather.pdf">Download file <i class="fas fa-download"></i></a>
-                                </div>
+                                <audio controls>
+                                    <source src="img/audio/bbc-janala/pronunciation/Lessons-01.mp3">
+                                </audio>
                             </div>
-
-                            <div class="col-xl-9 col-lg-9 col-md-9">
-                                <table>
-                                    <tbody>
-                                        <tr>
-                                            <th>Division</th>
-                                            <th>Highest <span>(tp)</span></th>
-                                            <th>Lowest <span>(tp)</span></th>
-                                        </tr>
-                                        <tr>
-                                            <td>Dhaka</td>
-                                            <td>44&#8451;</td>
-                                            <td>32&#8451;</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Rajshahi</td>
-                                            <td>30&#8451;</td>
-                                            <td>28&#8451;</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Khulna</td>
-                                            <td>40&#8451;</td>
-                                            <td>30&#8451;</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Barishal</td>
-                                            <td>28&#8451;</td>
-                                            <td>22&#8451;</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Chittagong</td>
-                                            <td>25&#8451;</td>
-                                            <td>17&#8451;</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Mymensingh</td>
-                                            <td>29&#8451;</td>
-                                            <td>24&#8451;</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Rangpur</td>
-                                            <td>32&#8451;</td>
-                                            <td>26&#8451;</td>
-                                        </tr>
-                                        <tr>
-                                            <td>Sylhet</td>
-                                            <td>20&#8451;</td>
-                                            <td>20&#8451;</td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                        </div>
+                        <div class="col-xl-6 col-lg-6 col-md-6">
+                            <div class="single-audio">
+                                <div class="audio-content">
+                                    <h3>Lessons - 01</h3>
+                                </div>
+                                <audio controls>
+                                    <source src="img/audio/bbc-janala/pronunciation/Lessons-01.mp3">
+                                </audio>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <!-- slider-area end -->
+        </section>
+        <!-- pronunciation-area end -->
 
         
 
