--- a/index.html
+++ b/index.html
@@ -810,7 +810,7 @@
                             <div class="col-xl-12 col-lg-12 col-md-12">
                                 <div class="slider-content three">
                                     <h1>Vowel <span>(20)</span></h1>
-                                    <h4>1. Monophthong<span>(12)</span><br> 2. Diphthong<span>(8)</span></h4>
+                                    <h4>1. Monophthong<span>(12)</span><br class="d-none"> 2. Diphthong<span>(8)</span></h4>
                                 </div>
                             </div>
                         </div>
@@ -823,7 +823,20 @@
                             <div class="col-xl-12 col-lg-12 col-md-12">
                                 <div class="slider-content three four">
                                     <h1>Monophthong <span>(12)</span></h1>
-                                    <h4>1. Short-thong<span>(7)</span></h4>
+                                    <h4>1. Short-thong<span>(7)</span><br class="d-none"> 2. Long-thong<span>(8)</span></h4>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="single-slider slider-height  d-flex align-items-center" style="background-image: url(img/bg2.jpg);">
+                    <div class="container">
+                        <div class="row mddh pt-200 pb-200">
+                            <div class="col-xl-12 col-lg-12 col-md-12">
+                                <div class="slider-content three four">
+                                    <h1>Monophthong <span>(12)</span></h1>
+                                    <h4>Short-thong<span>(7)</span></h4>
                                 </div>
                             </div>
                         </div>
@@ -843,9 +856,11 @@
                                         <div class="col-my we">
                                             <h4 data-animation="zoomInLeft" data-delay="2s">Hot<span>,</span></h4>
                                         </div>
-
+                                        <div class="col-my d-none d-md-block">
+                                            <h4 data-animation="zoomInLeft" data-delay="2s"><span></span></h4>
+                                        </div>
                                         <div class="col-my we">
-                                            <h4 data-animation="zoomInRight" data-delay="4s">Not<span class="cmb">,</span></h4>
+                                            <h4 data-animation="zoomInRight" data-delay="4s">Not<span class="cmb"></span></h4>
                                         </div>
                                         <div class="col-my d-none d-md-block">
                                             <h4 data-animation="fadeInRight" data-delay="5s"></h4>
